# wcfss

./: .gitignore  AGENTS.md  Cargo.toml  build.rs
bindings/fortran/: README.md  wcfss.f90
bindings/python/: .gitignore  README.md  __init__.py  pyproject.toml  wcfss.py
bindings/rust/: README.md  lib.rs
docs/: environment.md  intro.md  project_structure.md  spec.md
docs/legacy/: README.md  file_helper_linux.cpp
src/: ffi.rs  lib.rs  logging.rs  resolver.rs
src/common/: diagnostics.rs  mod.rs  types.rs  unicode.rs
src/linux_emulation/: cache.rs  dirindex.rs  mod.rs  parser.rs  resolver.rs
src/windows_native/: mod.rs  resolver.rs  win32.rs
tests/: linux.rs  windows.rs
tests/linux/: logging.rs  parser.rs  resolver.rs
tests/windows/: native_resolver.rs
